--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
       "predis/predis": "~1.0",
-      "vicens/weixinsdk": "dev-master"
+      "vicens/weixinsdk": "dev-master",
+      "curl/curl": "^1.2",
+      "overtrue/wechat": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
